--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,23 +1,5 @@
-<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-    <title>Spring Security Example </title>
-</head>
-<body>
-</div>
-<form action="/login" method="post">
-    <div><label> User Name : <input type="text" name="username"/> </label></div>
-    <div><label> Password: <input type="password" name="password"/> </label></div>
-    <input type="hidden" name="_csrf" value="{{_csrf.token}}"/>
-    <div><input type="submit" value="Sign In"/></div>
-    <a href="/registration"> registration</a>
-</form>
-</body>
-</html>
-
-<!--
 <!DOCTYPE HTML>
-&lt;!&ndash;
+<!--
   Copyright 2015 Benedikt Ritter
 
   Licensed under the Apache License, Version 2.0 (the "License");
@@ -31,15 +13,15 @@
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-&ndash;&gt;
+-->
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Spring Boot Heroku Example</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    &lt;!&ndash; Latest compiled and minified CSS &ndash;&gt;
+    <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" />
 
-    &lt;!&ndash; Optional theme &ndash;&gt;
+    <!-- Optional theme -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css" />
 </head>
 <body>
@@ -79,7 +61,7 @@
     </div>
 </div>
 
-&lt;!&ndash; Latest compiled and minified JavaScript &ndash;&gt;
+<!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 </body>
-</html>-->
+</html>
